// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp fTuDSQ"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl eXuqpb"
=======
            className="sc-eqKtKx bIPFLn"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl iZVeg"
=======
            className="sc-eqKtKx fzuzrg"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl dVoRdy"
=======
          className="sc-eqKtKx fqqsne"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp jlOnYs"
      size="small"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl ffAOWa"
=======
            className="sc-eqKtKx jBMUOm"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl SDgcJ"
=======
            className="sc-eqKtKx iRimUp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl cEyVmP"
=======
          className="sc-eqKtKx gzMIUT"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl eXuqpb"
=======
            className="sc-eqKtKx bIPFLn"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl eXuqpb"
=======
            className="sc-eqKtKx bIPFLn"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl iZVeg"
=======
            className="sc-eqKtKx fzuzrg"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl eXuqpb"
=======
            className="sc-eqKtKx bIPFLn"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl iZVeg"
=======
            className="sc-eqKtKx fzuzrg"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl dVoRdy"
=======
          className="sc-eqKtKx fqqsne"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl eXuqpb"
=======
            className="sc-eqKtKx bIPFLn"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl dVoRdy"
=======
          className="sc-eqKtKx fqqsne"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl iZVeg"
=======
            className="sc-eqKtKx fzuzrg"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl iZVeg"
=======
            className="sc-eqKtKx fzuzrg"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl dVoRdy"
=======
          className="sc-eqKtKx fqqsne"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl ffAOWa"
=======
            className="sc-eqKtKx jBMUOm"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl ffAOWa"
=======
            className="sc-eqKtKx jBMUOm"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl SDgcJ"
=======
            className="sc-eqKtKx iRimUp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl ffAOWa"
=======
            className="sc-eqKtKx jBMUOm"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl SDgcJ"
=======
            className="sc-eqKtKx iRimUp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl cEyVmP"
=======
          className="sc-eqKtKx gzMIUT"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl ffAOWa"
=======
            className="sc-eqKtKx jBMUOm"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl cEyVmP"
=======
          className="sc-eqKtKx gzMIUT"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl SDgcJ"
=======
            className="sc-eqKtKx iRimUp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
<<<<<<< HEAD
            className="sc-jmhOSl SDgcJ"
=======
            className="sc-eqKtKx iRimUp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
<<<<<<< HEAD
          className="sc-jmhOSl cEyVmP"
=======
          className="sc-eqKtKx gzMIUT"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
